[package]
name = "scheduled"
version = "1.0.2"
edition = "2021"
description = "A simple event scheduler"
license = "MIT"
repository = "https://github.com/Larmbs/scheduled"
documentation = "https://docs.rs/scheduled/latest/scheduled/"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
queued_rust = "0.7.4"
